--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "html-to-text": "^8.1.0",
     "charset-detector": "^0.0.2",
     "termdraw": "^2.0.0",
-    "ansiterm": "^1.1.0"
+    "ansiterm": "^1.1.0",
+    "convict": "^6.2.1",
+    "js-yaml": "^4.1.0"
   }
 }
