--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terminal-book-reader",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "terminal book reader",
   "main": "index.ts",
   "scripts": {
@@ -30,6 +30,9 @@
   },
   "bugs": {
     "url": "https://github.com/zangloo/tbr/issues"
+  },
+  "bin": {
+    "tbr": "./index.js"
   },
   "homepage": "https://github.com/zangloo/tbr#readme"
 }
