--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terminal-book-reader",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "terminal book reader",
   "main": "index.ts",
   "scripts": {
@@ -22,7 +22,8 @@
     "html-to-text": "^8.1.0",
     "js-yaml": "^4.1.0",
     "require-dir": "^1.2.0",
-    "termdraw": "^2.0.0"
+    "termdraw": "^2.0.0",
+    "tail": "^2.2.4"
   },
   "repository": {
     "type": "git",
