update package.json to start tbr by npm run tbr

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "terminal book reader",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "tbr": "./index.js"
   },
   "keywords": [
     "terminal",
