update terminal title on book opened

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "terminal-book-reader",
-  "version": "1.2.3",
+  "version": "1.2.4",
   "description": "terminal book reader",
   "main": "index.ts",
   "scripts": {
@@ -24,7 +24,8 @@
     "js-yaml": "^4.1.0",
     "require-dir": "^1.2.0",
     "termdraw": "^2.0.0",
-    "tail": "^2.2.4"
+    "tail": "^2.2.4",
+    "console-title": "^1.1.0"
   },
   "repository": {
     "type": "git",
