--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "js-yaml": "^4.1.0",
     "require-dir": "^1.2.0",
     "terminal-kit": "^2.2.3",
+    "adm-zip": "^0.5.9",
     "console-title": "^1.1.0"
   },
   "repository": {
