--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "require-dir": "^1.2.0",
     "terminal-kit": "^2.2.3",
     "adm-zip": "^0.5.9",
+    "pdf2json": "^2.0.0",
     "console-title": "^1.1.0"
   },
   "repository": {
